touchpad_browserside_fling_flaky_tests_fixed.

To fix the flakiness the tests are using mock time increment.

Bug: 795617
Change-Id: I58ac018638ae33e4cd691bf1ea15a47f3b74d80f
Reviewed-on: https://chromium-review.googlesource.com/847461
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526784}
Former-commit-id: c00c1189b6358b400bc17e8c62c49e6275f5bb0c